--- a/eCommerce.API/appsettings.Development.json
+++ b/eCommerce.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Settings": {
+    "SQLServerSettings": {
+      "ConnectionString": "Server=CT-5555\\CT5555;Initial Catalog=eCommerceDb;User ID=sa;Password=30030;Integrated Security=True; TrustServerCertificate=True"
+
+    }
   }
 }
